Finish html css

--- a/pages/index.html
+++ b/pages/index.html
@@ -9,19 +9,57 @@
   </head>
   <body>
     <header>
+      <h1>Cristina Marrero</h1>
+  <nav>
+  <ul>
+    <li><a href="https://www.facebook.com">About</a></li>
+    <li><a href="http://www.hellocristie.com">Projects</a></li>
+    <li><a href="http://www.hellocristie.com">Codes</a></li>
+    <li><a href="http://www.hellocristie.com">Education</a></li>
+    <li><a href="http://www.hellocristie.com">Work Experience</a></li>
+  </ul>
 
-    </header>
+  </header>
     <main>
       <section id="about-section">
         <div class="container">
           <h3>About me</h3>
+        <div class="row">
+       <div class="col-md-4 col-xs-12">
+          <img width="220" height="220" src="" />
+       </div>
+       <div class="col-md-8 col-xs-12">
+           <p>Lots of text here...With the four tiers of grids available you're bound to run into issues where, at certain breakpoints, your columns don't clear quite right as one is taller than the other. To fix that, use a combination of a .clearfix and o</p>
+       </div>
+   </div>
+</div>
           <!-- Your code here -->
           <hr>
         </div>
       </section>
       <section id="project-section">
         <div class="container">
-          <h3>Project</h3>
+          <h3>Projects</h3>
+          <div class="row">
+            <div class="col-xs-12 col-md-4">
+              <a href="#" class="thumbnail">
+                <img src="..." alt="...">
+              </a>
+              <h4>Project 1</h4>
+            </div>
+            <div class="col-xs-12 col-md-4">
+              <a href="#" class="thumbnail">
+                <img src="..." alt="...">
+              </a>
+              <h4>Project 2</h4>
+            </div>
+            <div class="col-xs-12 col-md-4">
+              <a href="#" class="thumbnail">
+                <img src="..." alt="...">
+              </a>
+              <h4>Project 3</h4>
+            </div>
+          </div>
           <!-- Your code here -->
           <hr>
         </div>
@@ -29,13 +67,33 @@
       <section id="goals-section">
         <div class="container">
           <h3>Goals</h3>
-          <!-- Your code here -->
+          <div class="row">
+        <!--  <div class="col-md-4 col-xs-12">
+            <img width="220" height="220" src="" />
+         </div>-->
+         <div class="col-md-8 col-xs-12">
+             <p>Lots of text here...With the four tiers of grids available you're bound to run into issues where, at certain breakpoints, your columns don't clear quite right as one is taller than the other. To fix that, use a combination of a .clearfix and o</p>
+         </div>
+     </div>
+  </div>
+
           <hr>
         </div>
       </section>
       <section id="education-section">
         <div class="container">
           <h3>Education</h3>
+          <div class="row">
+        <!--  <div class="col-md-4 col-xs-12">
+            <img width="220" height="220" src="" />
+         </div>-->
+         <div class="col-md-8 col-xs-12">
+             <h6>High School<h6>
+               <p>Lots of text here...With the four tiers of grids available you're bound to run into issues where, at certain breakpoints, your columns don't clear quite right as one is taller than the other. To fix that, use a combination of a .clearfix and o</p>
+               <h6>College<h6>
+                 <p>Lots of text here...With the four tiers of grids available you're bound to run into issues where, at certain breakpoints, your columns don't clear quite right as one is taller than the other. To fix that, use a combination of a .clearfix and o</p>
+         </div>
+     </div>
           <!-- Your code here -->
           <hr>
         </div>
@@ -43,11 +101,31 @@
       <section id="work-section">
         <div class="container">
           <h3>Work</h3>
+          <div class="row">
+        <!--  <div class="col-md-4 col-xs-12">
+            <img width="220" height="220" src="" />
+         </div>-->
+         <div class="col-md-8 col-xs-12">
+             <h6>About me<h6>
+               <p>Lots of text here...With the four tiers of grids available you're bound to run into issues where, at certain breakpoints, your columns don't clear quite right as one is taller than the other. To fix that, use a combination of a .clearfix and o</p>
+               <h6>Cometa Woks<h6>
+                 <p>Lots of text here...With the four tiers of grids available you're bound to run into issues where, at certain breakpoints, your columns don't clear quite right as one is taller than the other. To fix that, use a combination of a .clearfix and o</p>
+         </div>
+     </div>
           <!-- Your code here -->
         </div>
       </section>
       <footer>
         <!-- Your code here -->
+        <h5>Copyright (c) 2016 Copyright Holder All Rights Reserved.</h5>
+        <nav>
+          <ul>
+            <li><a href="https://www.facebook.com">My Facebook</a></li>
+            <li><a href="https://www.linkedin.com">LinkedIn</a></li>
+            <li><a href="https://www.facebook.com">My Facebook</a></li>
+
+          </ul>
+        </nav>
       </footer>
     </main>
   </body>
