--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <link rel="stylesheet" href="../assets/css/bootstrap.css">
-    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/bootstrap.css">
+    <link rel="stylesheet" href="assets/css/style.css">
   </head>
   <body>
     <header>
@@ -29,7 +29,7 @@
           <img width="220" height="220" src="" />
        </div>
        <div class="col-md-8 col-xs-12">
-           <p>Lots of text here...With the four tiers of grids available you're bound to run into issues where, at certain breakpoints, your columns don't clear quite right as one is taller than the other. To fix that, use a combination of a .clearfix and o</p>
+           <p>Lots of text hereWith the four tiers of grids available you're bound to run into issues where, at certain breakpoints, your columns don't clear quite right as one is taller than the other. To fix that, use a combination of a .clearfix and o</p>
        </div>
    </div>
 </div>
@@ -43,19 +43,19 @@
           <div class="row">
             <div class="col-xs-12 col-md-4">
               <a href="#" class="thumbnail">
-                <img src="..." alt="...">
+                <img src="" alt="">
               </a>
               <h4>Project 1</h4>
             </div>
             <div class="col-xs-12 col-md-4">
               <a href="#" class="thumbnail">
-                <img src="..." alt="...">
+                <img src="" alt="">
               </a>
               <h4>Project 2</h4>
             </div>
             <div class="col-xs-12 col-md-4">
               <a href="#" class="thumbnail">
-                <img src="..." alt="...">
+                <img src="" alt="">
               </a>
               <h4>Project 3</h4>
             </div>
@@ -72,7 +72,7 @@
             <img width="220" height="220" src="" />
          </div>-->
          <div class="col-md-8 col-xs-12">
-             <p>Lots of text here...With the four tiers of grids available you're bound to run into issues where, at certain breakpoints, your columns don't clear quite right as one is taller than the other. To fix that, use a combination of a .clearfix and o</p>
+             <p>Lots of text hereWith the four tiers of grids available you're bound to run into issues where, at certain breakpoints, your columns don't clear quite right as one is taller than the other. To fix that, use a combination of a .clearfix and o</p>
          </div>
      </div>
   </div>
